--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  color: #00f;
+  color: red;
 }
 
 h2 {
@@ -8,7 +8,7 @@ h2 {
 }
 
 p {
-  fon t-family: sans-serif;
+  font-family: sans-serif;
 }
 
 ul {
